<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_card"
        android:icon="@drawable/ic_business_card_black_24dp"
        android:title="@string/title_card" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account" />

</menu>
