<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="Add Card"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"/>

    <item
        android:id="@+id/add_card"
        android:title="Add Card"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add"/>

</menu>