<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/camera_button"
        android:title="add card"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_camera"/>

    <item
        android:id="@+id/done_button"
        android:title="done"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_done"/>

</menu>